[package]
name = "cached_tree_hash"
version = "0.1.0"
authors = ["Michael Sproul <michael@sigmaprime.io>"]
edition = "2021"

[dependencies]
ethereum-types = "0.14.1"
ssz_types = { path = "../../../ssz_types" }
ethereum_hashing = "1.0.0-beta.2"
ethereum_ssz_derive= { path = "../../../ethereum_ssz/ssz_derive" }
ethereum_ssz = { path = "../../../ethereum_ssz/ssz" }
tree_hash = "0.5.0"
smallvec = "1.6.1"

[dev-dependencies]
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"

[features]
arbitrary = ["ethereum-types/arbitrary"]
