[package]
name = "proto_array"
version = "0.2.0"
authors = ["Paul Hauner <paul@sigmaprime.io>"]
edition = "2021"

[[bin]]
name = "proto_array"
path = "src/bin.rs"

[dependencies]
types = { path = "../types" }
ethereum_ssz = { path = "../../../ethereum_ssz/ssz" }
ethereum_ssz_derive= { path = "../../../ethereum_ssz/ssz_derive" }
serde = "1.0.116"
serde_derive = "1.0.116"
serde_yaml = "0.8.13"
safe_arith = { path = "../safe_arith" }
superstruct = "0.5.0"